--- a/src/app/public/components/learningpath/learningpath.component.html
+++ b/src/app/public/components/learningpath/learningpath.component.html
@@ -10,7 +10,11 @@
 						<h1 class="tw-text-oebblack tw-font-extrabold tw-break-words" hlmH1>{{ learningPath.name }}</h1>
 						<p size="sm" hlmP class="tw-text-oebblack tw-mt-2">
 							{{ 'LearningPath.lpFrom' | translate }}
-							<a hlmA [routerLink]="['/public/issuers/', issuer.slug]">{{ issuer.name }}</a>
+							<a
+								class="tw-underline !tw-text-link hover:!tw-text-buttonhover tw-cursor-pointer"
+								[routerLink]="['/public/issuers/', issuer.slug]"
+								>{{ issuer.name }}</a
+							>
 						</p>
 						<div class="tw-flex tw-flex-row tw-gap-2 tw-text-[#6B7280] tw-mt-1 tw-items-end">
 							<ng-icon hlm name="lucideClock" />
