--- a/src/app/showcase/components/oeb-showcase.component.html
+++ b/src/app/showcase/components/oeb-showcase.component.html
@@ -95,7 +95,7 @@
 						<oeb-button variant="link" text="Only Link"></oeb-button>
 						<oeb-button variant="secondary" size="sm" text="Small"></oeb-button>
 						<oeb-button variant="secondary" size="xs" text="Inline"></oeb-button>
-						<a hlmP hlmA text="inline link"></a>
+						<a hlmP text="inline link"></a>
 					</div>
 				</div>
 
