--- a/src/app/issuer/components/issuer-staff/issuer-staff.component.html
+++ b/src/app/issuer/components/issuer-staff/issuer-staff.component.html
@@ -174,36 +174,37 @@
 			<h2 hlmH2 class="!tw-text-oebblack tw-mb-2">
 				{{ 'General.members' | translate }} {{ 'General.of' | translate }} {{ issuer.name }}
 			</h2>
-			<hlm-table
+			<table
+				hlmTable
 				class="tw-rounded-t-[20px] tw-overflow-hidden tw-w-full tw-max-w-[100%] tw-bg-white tw-border-lightgrey tw-border"
 			>
-				<hlm-trow class="!tw-bg-lightgrey tw-text-oebblack tw-flex-wrap hover:tw-bg-lightgrey">
+				<tr hlmTr class="!tw-bg-lightgrey tw-text-oebblack tw-flex-wrap hover:tw-bg-lightgrey">
 					<!-- Name -->
-					<hlm-th class="tw-text-oebblack md:tw-w-[25%] tw-w-[33%] tw-px-4">Name</hlm-th>
+					<th hlmTh class="tw-text-oebblack md:tw-w-[25%] tw-w-[33%] tw-px-4">Name</th>
 					<!-- E-Mail -->
-					<hlm-th class="tw-text-oebblack md:tw-w-[25%] tw-w-[33%] tw-px-4">{{
-						'General.email' | translate
-					}}</hlm-th>
+					<th hlmTh class="tw-text-oebblack md:tw-w-[25%] tw-w-[33%] tw-px-4">
+						{{ 'General.email' | translate }}
+					</th>
 					<!-- Role -->
-					<hlm-th class="tw-text-oebblack md:tw-w-[25%] tw-w-[33%] tw-px-4">{{
-						'General.role' | translate
-					}}</hlm-th>
+					<th hlmTh class="tw-text-oebblack md:tw-w-[25%] tw-w-[33%] tw-px-4">
+						{{ 'General.role' | translate }}
+					</th>
 					<!-- Actions -->
-					<hlm-th class="tw-text-oebblack md:tw-w-[25%] tw-w-0 tw-px-4"></hlm-th>
-				</hlm-trow>
+					<th hlmTh class="tw-text-oebblack md:tw-w-[25%] tw-w-0 tw-px-4"></th>
+				</tr>
 				@for (member of issuer.staff; track member) {
-					<hlm-trow class="tw-border-lightgrey tw-flex-wrap tw-py-2">
-						<hlm-th class="md:tw-w-[25%] tw-w-[33%] tw-px-4 tw-items-center">
+					<tr hlmTr class="tw-border-lightgrey tw-flex-wrap tw-py-2">
+						<th hlmTh class="md:tw-w-[25%] tw-w-[33%] tw-px-4 tw-items-center">
 							<span class="tw-font-normal tw-text-lg tw-text-oebblack tw-truncate">{{
 								member.nameLabel
 							}}</span>
-						</hlm-th>
-						<hlm-th class="md:tw-w-[25%] tw-w-[33%] tw-px-4 tw-text-center tw-flex tw-items-center"
-							><p hlmP class="tw-font-normal tw-text-lg tw-text-oebblack tw-truncate">
+						</th>
+						<th hlmTh class="md:tw-w-[25%] tw-w-[33%] tw-px-4 tw-text-center tw-flex tw-items-center">
+							<p hlmP class="tw-font-normal tw-text-lg tw-text-oebblack tw-truncate">
 								{{ member.email }}
-							</p></hlm-th
-						>
-						<hlm-th class="tw-w-36 md:tw-w-48 !tw-text-oebblack sm:tw-grid">
+							</p>
+						</th>
+						<th hlmTh class="tw-w-36 md:tw-w-48 !tw-text-oebblack sm:tw-grid">
 							@if (isCurrentUserIssuerOwner) {
 								<div class="forminput forminput-full">
 									<div class="forminput-x-inputs">
@@ -225,8 +226,8 @@
 									</div>
 								</div>
 							}
-						</hlm-th>
-						<hlm-th class="md:tw-w-[25%] tw-w-full tw-px-4 tw-text-center tw-flex md:tw-justify-end">
+						</th>
+						<th hlmTh class="md:tw-w-[25%] tw-w-full tw-px-4 tw-text-center tw-flex md:tw-justify-end">
 							@if (member != issuer.currentUserStaffMember) {
 								<span
 									(click)="removeMember(member)"
@@ -234,10 +235,10 @@
 									>{{ 'General.remove' | translate }}</span
 								>
 							}
-						</hlm-th>
-					</hlm-trow>
+						</th>
+					</tr>
 				}
-			</hlm-table>
+			</table>
 			<!-- <issuer-staff-datatable
         [members]="issuer.staff"
         [issuer]="issuer"
