--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -13,7 +13,7 @@
 					<p hlmP class="tw-text-oebblack tw-my-4">
 						{{ 'Login.areYouNew' | translate }}
 						<a
-							class="tw-underliner !tw-text-link hover:!tw-text-buttonhover tw-cursor-pointer"
+							class="tw-underline !tw-text-link hover:!tw-text-buttonhover tw-cursor-pointer"
 							href="#"
 							[routerLink]="['/signup']"
 							>{{ 'Login.createAccount' | translate }}</a
@@ -56,7 +56,7 @@
 							>
 								<span label-additions>
 									<a
-										class="tw-underliner !tw-text-link hover:!tw-text-buttonhover tw-cursor-pointer"
+										class="tw-underline !tw-text-link hover:!tw-text-buttonhover tw-cursor-pointer"
 										class="tw-relative tw-text-purple tw-z-20 tw-font-semibold"
 										href="#"
 										tabindex="-1"
