fix: table looks

--- a/src/app/issuer/components/issuer-staff/issuer-staff.component.html
+++ b/src/app/issuer/components/issuer-staff/issuer-staff.component.html
@@ -176,7 +176,7 @@
 			</h2>
 			<table
 				hlmTable
-				class="tw-rounded-t-[20px] tw-overflow-hidden tw-w-full tw-max-w-[100%] tw-bg-white tw-border-lightgrey tw-border"
+				class="tw-rounded-t-[20px] tw-overflow-hidden tw-w-full tw-max-w-[100%] tw-bg-white tw-border-lightgrey tw-border tw-border-solid"
 			>
 				<tr hlmTr class="!tw-bg-lightgrey tw-text-oebblack tw-flex-wrap hover:tw-bg-lightgrey">
 					<!-- Name -->
