--- a/src/app/showcase/components/oeb-showcase.component.html
+++ b/src/app/showcase/components/oeb-showcase.component.html
@@ -168,7 +168,7 @@
 						</h2>
 					</div>
 
-					<badges-datatable [caption]="" [badges]="badges"></badges-datatable>
+					<badges-datatable [badges]="badges"></badges-datatable>
 				</div>
 
 				<div class="oeb-section">
