--- a/src/app/public/components/issuer/issuer.component.html
+++ b/src/app/public/components/issuer/issuer.component.html
@@ -3,6 +3,7 @@
 		<ng-template [bgAwaitPromises]="issuerIdParam">
 			<!-- Embedded View -->
 			<oeb-issuer-detail
+				[networks]="networks"
 				[badges]="badgeClasses"
 				[learningPaths]="learningPaths"
 				[public]="true"
