--- a/src/app/common/components/network/oeb-network-detail.component.html
+++ b/src/app/common/components/network/oeb-network-detail.component.html
@@ -38,7 +38,7 @@
 		>
 			<div>
 				<h2 class="tw-w-full tw-text-oebblack tw-text-lg tw-font-bold">
-					{{ 'Network.partners' | translate }}
+					{{ 'Network.partner' | translate }}
 				</h2>
 				<ul class="tw-w-full tw-list-none tw-mt-2">
 					@for (issuer of issuers; track issuer) {
