--- a/src/app/issuer/components/network-partners/network-partners.component.html
+++ b/src/app/issuer/components/network-partners/network-partners.component.html
@@ -3,4 +3,8 @@
 		<span class="tw-text-oebblack tw-text-lg tw-block">{{ 'Network.noInstitutionAddedYet' | translate }}</span>
 		<oeb-button (click)="openDialog()" [text]="'Network.inviteInstitutions' | translate"> </oeb-button>
 	</div>
+
+	<network-partners-datatable [partners]="issuers"></network-partners-datatable>
+
+	<network-invites-datatable [invites]="invites"></network-invites-datatable>
 </ng-container>
