--- a/src/app/issuer/components/network-partners/network-partners.component.html
+++ b/src/app/issuer/components/network-partners/network-partners.component.html
@@ -1,10 +1,13 @@
 <ng-container *bgAwaitPromises="[partnersLoaded]">
-	<div class="tw-my-8">
-		<span class="tw-text-oebblack tw-text-lg tw-block">{{ 'Network.noInstitutionAddedYet' | translate }}</span>
-		<oeb-button (click)="openDialog()" [text]="'Network.inviteInstitutions' | translate"> </oeb-button>
-	</div>
-
-	<network-partners-datatable [partners]="issuers"></network-partners-datatable>
-
-	<network-invites-datatable [invites]="invites"></network-invites-datatable>
+	@if (!issuers.length) {
+		<div class="tw-my-8">
+			<span class="tw-text-oebblack tw-text-lg tw-block">{{ 'Network.noInstitutionAddedYet' | translate }}</span>
+			<oeb-button (click)="openDialog()" [text]="'Network.inviteInstitutions' | translate"> </oeb-button>
+		</div>
+	} @else {
+		<network-partners-datatable [network]="network" [partners]="issuers"></network-partners-datatable>
+	}
+	@if (invites.length) {
+		<network-invites-datatable [network]="network" [invites]="invites"></network-invites-datatable>
+	}
 </ng-container>
