feat: translations, minor api and ui changes

--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -9,8 +9,14 @@
 				<img width="100px" [src]="network.image" alt="Network Logo" />
 				<div class="tw-flex tw-flex-col">
 					<span class="tw-font-bold tw-text-3xl tw-text-oebblack">{{ network.name }}</span>
-					<span class="tw-text-oebblack tw-text-lg tw-font-semibold"
-						>{{ 'Issuer.yourRole' | translate }} {{ network.currentUserStaffMember.roleSlug }}</span
+					<span class="tw-text-oebblack tw-text-lg tw-font-semibold">
+						{{
+							'Network.yourRole'
+								| translate
+									: {
+											role: 'Network.role.' + network.currentUserStaffMember.roleSlug | translate
+									  }
+						}}</span
 					>
 				</div>
 			</section>
