--- a/src/app/issuer/components/network-invite-confirmation/network-invite-confirmation.component.html
+++ b/src/app/issuer/components/network-invite-confirmation/network-invite-confirmation.component.html
@@ -1,14 +1,21 @@
 <div class="oeb tw-relative tw-w-full">
 	<div class="page-padding">
 		<div
-			*bgAwaitPromises="[networkLoaded]"
+			*bgAwaitPromises="[inviteLoaded]"
 			class="tw-bg-lightgrey tw-py-7 tw-pl-8 tw-pr-10 md:tw-py-[60px] md:tw-pl-28 md:tw-pr-80 tw-flex md:tw-justify-between"
 		>
 			<div class="tw-flex tw-flex-col tw-gap-16">
-				<p class="md:tw-text-3xl tw-text-oebblack">
-					Bestätige die <span class="tw-font-bold">Netzwerk-Einladung von {{ network.name }}</span> für deine
-					Institution mit Klick auf den Button:
-				</p>
+				<p
+					class="md:tw-text-3xl tw-text-oebblack"
+					[innerHTML]="
+						'Network.confirmNetworkInvitation'
+							| translate
+								: {
+										networkName: invite.network.name,
+										issuerName: invite.issuer.name
+								  }
+					"
+				></p>
 				<oeb-button (click)="confirmInvitation()" [text]="'Network.confirmInvitation' | translate">
 				</oeb-button>
 			</div>
