feat/table design (#1535)
* feat: reset hlm table and introduc our own tokens for styling

* fix: reset datatable

* feat: start rebuilding badges table

* feat: reimplement datatable-badges

* fix: show msg when navigate to badge awarding

* feat: reimplement micro degree table

* feat: simplify the micro degree component

* feat: implement sorting in badges datatable

* feat: enable sorting in micro degree table

* feat: finish qr code award table

* feat: reimplement issuer detail table

* feat: use name instead of email for badge recipients

* refactor: format

* feat: reimplement micro degree graduates table

* fix: spacings in multiline table cells

* fix: resolve line alignment issue in badge table

* feat: reimplement issuer staff table

* feat: finish staff request tables

* feat: redo profile emails table

* docs: add comment explaining weird getter

* refactor: remove unused observable

* refactor: remove unused import

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -166,7 +166,6 @@
 			<ng-template [bgAwaitPromises]="requestsLoaded">
 				<badges-datatable
 					*ngIf="!public"
-					[caption]=""
 					[badges]="badgeResults"
 					(directBadgeAward)="routeToBadgeAward($event, issuer)"
 					(qrCodeAward)="routeToQRCodeAward($event, issuer)"
@@ -221,10 +220,10 @@
 					</h2>
 					<learningpaths-datatable
 						*ngIf="!public"
-						[learningPaths]="learningPaths"
+						[learningPaths]="apiLearningPaths"
 						[issuer]="isFullIssuer(issuer) ? issuer : null"
-						(actionElement)="deleteLearningPath($event, issuer)"
-						(redirectToLearningPathDetail)="redirectToLearningPathDetail($event, issuer)"
+						(onDelete)="deleteLearningPath($event, issuer)"
+						(onNavigateToDetail)="redirectToLearningPathDetail($event, issuer)"
 					></learningpaths-datatable>
 
 					<ng-container *ngIf="public">
