--- a/src/app/issuer/components/issuer-staff/issuer-staff.component.html
+++ b/src/app/issuer/components/issuer-staff/issuer-staff.component.html
@@ -25,7 +25,6 @@
 				size="mediumText"
 				(click)="openDialog(this.translate.instant('Issuer.addMember'))"
 			></oeb-button>
-
 		</div>
 		<section class="tw-mt-8">
 			<h2 hlmH2 class="!tw-text-oebblack tw-mb-2">{{ 'Issuer.openStaffRequests' | translate }}</h2>
@@ -37,17 +36,15 @@
 				<issuer-staff-requests-datatable
 					[requests]="staffRequests()"
 					(deleteStaffRequest)="deleteStaffRequest($event)"
-					(confirmStaffRequest)="confirmStaffRequest($event)" />
+					(confirmStaffRequest)="confirmStaffRequest($event)"
+				/>
 			}
 		</section>
 		<section class="tw-mt-8">
 			<h2 hlmH2 class="!tw-text-oebblack tw-mb-2">
 				{{ 'General.members' | translate }} {{ 'General.of' | translate }} {{ issuer().name }}
 			</h2>
-			<table
-				hlmTable
-				oeb-table-secondary
-			>
+			<table hlmTable oeb-table-secondary>
 				<thead hlmTHead>
 					@for (headerRow of table.getHeaderGroups(); track headerRow.id) {
 						<tr hlmTr>
@@ -72,8 +69,7 @@
 											</div>
 
 											@if (headerCell.column.getIsSorted()) {
-												@let order = headerCell.column.getNextSortingOrder() === "asc" ? "desc" : "asc";
-												@if (order === 'asc') {
+												@if (getOrderForHeaderCell(headerCell) === 'asc') {
 													<ng-icon hlm size="base" name="lucideChevronUp" />
 												} @else {
 													<ng-icon hlm size="base" name="lucideChevronDown" />
@@ -91,7 +87,7 @@
 				<tbody hlmTBody>
 					@for (row of table.getRowModel().rows; track row.id; let i = $index) {
 						<tr hlmTr>
-							@for (cell of row.getVisibleCells(); track cell.id;) {
+							@for (cell of row.getVisibleCells(); track cell.id) {
 								<td hlmTd>
 									<ng-container
 										*flexRender="cell.column.columnDef.cell; props: cell.getContext(); let cell"
@@ -188,9 +184,7 @@
 </ng-template>
 <ng-template #staffRequestRoleTemplate let-requestid="requestid">
 	<form [formGroup]="staffRequestRoleForm.rawControl" (ngSubmit)="submitStaffRequestRoleForm(requestid)">
-		<span class="tw-text-oebblack tw-text-lg tw-font-bold">{{
-			'Issuer.addMember_chooseRole' | translate
-		}}</span>
+		<span class="tw-text-oebblack tw-text-lg tw-font-bold">{{ 'Issuer.addMember_chooseRole' | translate }}</span>
 		<section class="tw-mt-4">
 			@for (role of issuerStaffRoleOptions; track role; let last = $last) {
 				<bg-formfield-radio
@@ -249,19 +243,19 @@
 	@if (isCurrentUserIssuerOwner()) {
 		<div class="forminput forminput-full">
 			<div class="forminput-x-inputs">
-					<select
-						#memberSelect
-						class="!tw-border-purple !tw-border-solid !tw-text-oebblack tw-rounded-[10px] tw-text-lg"
-						[ngModel]="context.getValue()"
-						[disabled]="context.getValue() === 'owner'"
-						(change)="changeMemberRole(context.row.original, $any(memberSelect.value))"
-						>
-							@for (role of issuerStaffRoleOptions; track role) {
-								<option [value]="role.value">
-									{{ role.label | translate }}
-								</option>
-							}
-					</select>
+				<select
+					#memberSelect
+					class="!tw-border-purple !tw-border-solid !tw-text-oebblack tw-rounded-[10px] tw-text-lg"
+					[ngModel]="context.getValue()"
+					[disabled]="context.getValue() === 'owner'"
+					(change)="changeMemberRole(context.row.original, $any(memberSelect.value))"
+				>
+					@for (role of issuerStaffRoleOptions; track role) {
+						<option [value]="role.value">
+							{{ role.label | translate }}
+						</option>
+					}
+				</select>
 			</div>
 		</div>
 	}
@@ -274,6 +268,7 @@
 			(click)="removeMember(context.row.original)"
 			size="sm"
 			width="full_width"
-			[text]="'General.remove' | translate"/>
+			[text]="'General.remove' | translate"
+		/>
 	}
 </ng-template>
