--- a/src/app/profile/components/profile/profile.component.html
+++ b/src/app/profile/components/profile/profile.component.html
@@ -49,10 +49,7 @@
 			</form>
 		</div>
 
-		<table
-				hlmTable
-				oeb-table-secondary
-			>
+		<table hlmTable oeb-table-secondary>
 			<thead hlmTHead>
 				@for (headerRow of table.getHeaderGroups(); track headerRow.id) {
 					<tr hlmTr>
@@ -77,8 +74,7 @@
 										</div>
 
 										@if (headerCell.column.getIsSorted()) {
-											@let order = headerCell.column.getNextSortingOrder() === "asc" ? "desc" : "asc";
-											@if (order === 'asc') {
+											@if (getOrderForHeaderCell(headerCell) === 'asc') {
 												<ng-icon hlm size="base" name="lucideChevronUp" />
 											} @else {
 												<ng-icon hlm size="base" name="lucideChevronDown" />
@@ -94,9 +90,9 @@
 				}
 			</thead>
 			<tbody hlmTBody>
-				@for (row of table.getRowModel().rows; track row.id;) {
+				@for (row of table.getRowModel().rows; track row.id) {
 					<tr hlmTr>
-						@for (cell of row.getVisibleCells(); track cell.id;) {
+						@for (cell of row.getVisibleCells(); track cell.id) {
 							<td hlmTd class="tw-align-middle">
 								<ng-container
 									*flexRender="cell.column.columnDef.cell; props: cell.getContext(); let cell"
@@ -119,8 +115,10 @@
 <ng-template #emailAddressCellTemplate let-context>
 	<div class="tw-flex tw-flex-row tw-gap-4 tw-items-center">
 		<p>{{ context.getValue() }}</p>
-		@if(context.row.original.primary) {
-			<p class="tw-px-2 tw-py-1 tw-uppercase tw-bg-green-950 tw-text-white tw-text-xs tw-font-semibold tw-rounded-full">
+		@if (context.row.original.primary) {
+			<p
+				class="tw-px-2 tw-py-1 tw-uppercase tw-bg-green-950 tw-text-white tw-text-xs tw-font-semibold tw-rounded-full"
+			>
 				{{ 'Profile.primary' | translate }}
 			</p>
 		}
@@ -129,18 +127,23 @@
 
 <ng-template #verifiedStateCellTemplate let-context>
 	<div class="tw-flex tw-flex-row tw-gap-4 tw-items-center">
-	@if(context.getValue()) {
-		<ng-icon hlm name="lucideCheck" size="18px" class="tw-bg-green-950 tw-text-white tw-rounded-full tw-size-8 tw-p-0.5" />
-		<p>{{ 'Profile.verified' | translate }}</p>
-	} @else {
-		<ng-icon hlm name="lucideClock" size="22px" />
-		<p>{{ 'Profile.pending' | translate }}</p>
-	}
+		@if (context.getValue()) {
+			<ng-icon
+				hlm
+				name="lucideCheck"
+				size="18px"
+				class="tw-bg-green-950 tw-text-white tw-rounded-full tw-size-8 tw-p-0.5"
+			/>
+			<p>{{ 'Profile.verified' | translate }}</p>
+		} @else {
+			<ng-icon hlm name="lucideClock" size="22px" />
+			<p>{{ 'Profile.pending' | translate }}</p>
+		}
 	</div>
 </ng-template>
 
 <ng-template #badgeActionsCellTemplate let-context>
-	@if(!context.row.original.verified) {
+	@if (!context.row.original.verified) {
 		<div>
 			<oeb-dropdown
 				[trigger]="svgTrigger"
@@ -148,11 +151,7 @@
 				[menuItems]="menuItems()[context.row.index]"
 			></oeb-dropdown>
 			<ng-template #svgTrigger>
-				<svg
-					class="tw-size-6"
-					fill="var(--color-purple)"
-					icon="icon_more"
-				></svg>
+				<svg class="tw-size-6" fill="var(--color-purple)" icon="icon_more"></svg>
 				<span class="visuallyhidden">Mehr</span>
 			</ng-template>
 		</div>
