--- a/src/app/catalog/components/network-catalog/network-catalog.component.html
+++ b/src/app/catalog/components/network-catalog/network-catalog.component.html
@@ -5,9 +5,9 @@
 			<h2 hlmH1 class="tw-text-oebblack">
 				{{ 'Network.networksHeadline' | translate }}
 			</h2>
-			<ng-template [showLoader]="false" [bgAwaitPromises]="[networksLoaded]">
+			<ng-template [showLoader]="false" [bgAwaitPromises]="[pageReadyPromise]">
 				<span hlmH1 class="lg:tw-pl-[10%] tw-text-purple tw-font-black tw-break-words">
-					<span [countUp]="networks.length">{{ networks.length }}</span>
+					<span [countUp]="networks.length">{{ networks().length }}</span>
 					<span>
 						{{ networksPluralWord }}
 					</span>
@@ -17,10 +17,10 @@
 	</div>
 
 	<div>
-		<ng-template [showLoader]="true" [bgAwaitPromises]="[networksLoaded]">
+		<ng-template [showLoader]="true" [bgAwaitPromises]="[pageReadyPromise]">
 			<section>
 				<div class="tw-grid sm:tw-grid-cols-issuer tw-gap-6 tw-w-full" [@stagger]>
-					@for (network of networks; track network) {
+					@for (network of networks(); track network) {
 						<oeb-networkcard
 							@appearAnimation
 							[network]="network"
@@ -28,19 +28,6 @@
 						></oeb-networkcard>
 					}
 				</div>
-
-				<!-- @if (
-					(issuerResults.length >= 30 || (currentPage == totalPages && currentPage != 1)) &&
-					badgesDisplay != 'map'
-				) {
-					<div class="tw-mt-8">
-						<oeb-numbered-pagination
-							[totalProducts]="isFiltered() ? filteredIssuers.length : issuers.length"
-							[(page)]="currentPage"
-						>
-						</oeb-numbered-pagination>
-					</div>
-				} -->
 			</section>
 		</ng-template>
 	</div>
