--- a/src/app/common/components/badge-detail/badge-detail.component.scss
+++ b/src/app/common/components/badge-detail/badge-detail.component.scss
@@ -3,7 +3,7 @@
 	padding-top: calc(var(--gridspacing) * 4);
 	border-radius: 14px;
 	grid-gap: calc(var(--gridspacing) * 2);
-	background-color: #ecfeed;
+	background-color: #f8f6fc;
 }
 
 @media (min-width: 768px) {
