--- a/src/app/catalog/components/network-catalog/network-catalog.component.html
+++ b/src/app/catalog/components/network-catalog/network-catalog.component.html
@@ -7,7 +7,7 @@
 			</h2>
 			<ng-template [showLoader]="false" [bgAwaitPromises]="[pageReadyPromise]">
 				<span hlmH1 class="lg:tw-pl-[10%] tw-text-purple tw-font-black tw-break-words">
-					<span [countUp]="networks.length">{{ networks().length }}</span>
+					<span [countUp]="networks().length">{{ networks().length }}</span>
 					<span>
 						{{ networksPluralWord }}
 					</span>
