fix: use ng-template for network list template

--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -137,7 +137,6 @@
 				</div>
 			</div>
 		</div>
-		<network-list [networks]="networks" [promise]="networksLoaded" #networksTemplate> </network-list>
 	</div>
 </div>
 
@@ -410,4 +409,8 @@
 			</div>
 		</ng-template>
 	</section>
+</ng-template>
+
+<ng-template #networksTemplate>
+	<network-list [networks]="networks" [promise]="networksLoaded" />
 </ng-template>
