--- a/src/app/common/components/network/oeb-network-detail.component.html
+++ b/src/app/common/components/network/oeb-network-detail.component.html
@@ -13,26 +13,27 @@
 			<h1 hlmH1 class="tw-text-purple tw-font-semibold md:tw-text-[35px] xl:tw-text-[46px]">
 				{{ network.name }}
 			</h1>
-			<ng-container *ngIf="public">
-				<p hlmP size="sm" *ngIf="network.url">
+			@if (public && network.url) {
+				<p hlmP size="sm">
 					<a hlmA target="_blank" [href]="network.url">{{ network.url }}</a>
 				</p>
-			</ng-container>
+			}
 		</div>
 	</div>
 	<div class="tw-w-auto tw-hidden md:tw-grid !tw-content-center">
-		<div *ngIf="public" class="tw-flex tw-flex-col tw-gap-2">
-			<oeb-button
-				width="full_width"
-				class="tw-whitespace-nowrap"
-				*ngIf="public"
-				(click)="routeToUrl(network.url)"
-				text="Website"
-			>
-			</oeb-button>
-			<oeb-button class="tw-whitespace-nowrap" [text]="'Issuer.memberView' | translate" variant="secondary">
-			</oeb-button>
-		</div>
+		@if (public) {
+			<div class="tw-flex tw-flex-col tw-gap-2">
+				<oeb-button
+					width="full_width"
+					class="tw-whitespace-nowrap"
+					(click)="routeToUrl(network.url)"
+					text="Website"
+				>
+				</oeb-button>
+				<oeb-button class="tw-whitespace-nowrap" [text]="'Issuer.memberView' | translate" variant="secondary">
+				</oeb-button>
+			</div>
+		}
 		<section
 			class="tw-bg-oebgrey tw-mt-4 tw-rounded-[10px] tw-p-2 tw-flex tw-flex-col tw-justify-center tw-items-center"
 		>
