fix: convert to input signals

--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -137,7 +137,9 @@
 				</div>
 			</div>
 		</div>
-		<network-list [networks]="networks" [promise]="networksLoaded" #networksTemplate> </network-list>
+		@if (activeTab == 'networks') {
+			<network-list [networks]="networks()" [promise]="networksLoaded()" #networksTemplate> </network-list>
+		}
 	</div>
 </div>
 
