--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -4,24 +4,25 @@
 			<bg-breadcrumbs [linkentries]="crumbs"> </bg-breadcrumbs>
 		</div>
 		<h1 hlmH1 class="tw-text-purple tw-font-black">{{ 'Network.welcomeDashboard' | translate }}</h1>
-		<ng-template [bgAwaitPromises]="[networkLoaded]">
+		<ng-template [bgAwaitPromises]="[networkLoaded()]">
 			<section class="tw-flex tw-gap-4 tw-mt-8 tw-items-center">
-				<img width="100px" [src]="network.image" alt="Network Logo" />
+				<img width="100px" [src]="network().image" alt="Network Logo" />
 				<div class="tw-flex tw-flex-col">
-					<span class="tw-font-bold tw-text-3xl tw-text-oebblack">{{ network.name }}</span>
+					<span class="tw-font-bold tw-text-3xl tw-text-oebblack">{{ network().name }}</span>
 					<span class="tw-text-oebblack tw-text-lg tw-font-semibold">
 						{{
 							'Network.yourRole'
 								| translate
 									: {
-											role: 'Network.role.' + network.currentUserStaffMember.roleSlug | translate
+											role:
+												'Network.role.' + network().currentUserStaffMember.roleSlug | translate
 									  }
 						}}</span
 					>
 				</div>
 			</section>
 			<p class="tw-text-oebblack tw-text-lg tw-mt-2 tw-pb-8">
-				{{ network.description }}
+				{{ network().description }}
 			</p>
 			<oeb-tabs
 				[variant]="'lightpurple'"
@@ -41,8 +42,9 @@
 
 <ng-template #partnerTemplate>
 	<network-partners
-		[network]="network"
-		[issuers]="partnerIssuers"
+		[partnersLoaded]="networkLoaded()"
+		[network]="network()"
+		[issuers]="partnerIssuers()"
 		[addInstitutionsTemplate]="addInstitutionsTemplate"
 	></network-partners>
 </ng-template>
@@ -52,5 +54,5 @@
 </ng-template>
 
 <ng-template #addInstitutionsTemplate>
-	<add-institution [network]="network"> </add-institution>
+	<add-institution [network]="network()"> </add-institution>
 </ng-template>
