--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -23,7 +23,7 @@
 						[disabled-when-requesting]="true"
 						[text]="'Issuer.createInstitution' | translate"
 					></oeb-button>
-				} @else if (networks?.length && activeTab == 'networks') {
+				} @else if (networks()?.length && activeTab == 'networks') {
 					<oeb-button
 						class="md:tw-whitespace-nowrap"
 						variant="secondary"
@@ -412,5 +412,5 @@
 </ng-template>
 
 <ng-template #networksTemplate>
-	<network-list [networks]="networks" [promise]="networksLoaded" />
+	<network-list [networks]="networks()" />
 </ng-template>
