--- a/src/app/issuer/components/network-list/network-list.component.html
+++ b/src/app/issuer/components/network-list/network-list.component.html
@@ -1,5 +1,5 @@
-<ng-container *bgAwaitPromises="[promise()]">
-	@if (networks.length == 0) {
+<ng-container>
+	@if (networks().length == 0) {
 		<p hlmP size="lg" class="tw-py-3 tw-flex tw-flex-col">
 			<span class="tw-text-oebblack tw-font-bold" [innerHTML]="'Network.noIssuerInNetwork' | translate"></span>
 			<span class="tw-mt-1" [innerHTML]="'Network.networksUseBadgesTogether' | translate"></span>
