--- a/src/app/issuer/components/network-partners/network-partners.component.html
+++ b/src/app/issuer/components/network-partners/network-partners.component.html
@@ -1,5 +1,5 @@
-<ng-container *bgAwaitPromises="[partnersLoaded()]">
-	@if (!issuers.length) {
+<ng-container>
+	@if (!issuers().length) {
 		<div class="tw-my-8">
 			<span class="tw-text-oebblack tw-text-lg tw-block">{{ 'Network.noInstitutionAddedYet' | translate }}</span>
 			<oeb-button (click)="openDialog()" [text]="'Network.inviteInstitutions' | translate"> </oeb-button>
@@ -8,7 +8,7 @@
 		<network-partners-datatable
 			[network]="network()"
 			[partners]="issuers()"
-			[approvedInvites]="approvedInvites"
+			[approvedInvites]="approvedInvites()"
 		></network-partners-datatable>
 	}
 	@if (pendingInvites().length) {
