feat: emit output to grandparent for removing partner

--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -44,6 +44,7 @@
 	<network-partners
 		[network]="network()"
 		[issuers]="partnerIssuers()"
+		(removePartnerRequest)="onRemovePartner($event)"
 		[addInstitutionsTemplate]="addInstitutionsTemplate"
 	></network-partners>
 </ng-template>
