--- a/src/app/issuer/components/add-institution/add-institution.component.html
+++ b/src/app/issuer/components/add-institution/add-institution.component.html
@@ -2,7 +2,7 @@
 	<input
 		#issuerSearchInput
 		#issuerSearchInputModel="ngModel"
-		class="tw-bg-white tw-border tw-border-solid tw-border-[var(--color-purple)] tw-rounded-md tw-shadow-sm tw-p-2 tw-px-2 tw-resize-none tw-text-sm tw-text-gray-700 tw-w-full tw-mb-6"
+		class="tw-bg-white tw-border tw-border-solid tw-border-[var(--color-purple)] tw-rounded-md tw-shadow-sm tw-p-2 tw-px-2 tw-resize-none tw-text-sm tw-text-gray-700 tw-w-11/12 tw-mb-6"
 		[(ngModel)]="issuerSearchQuery"
 		[ngModelOptions]="{ standalone: true }"
 		[placeholder]="'Issuer.searchIssuer' | translate"
